Setup GarageMode game mode, created GarageEditorPlayer
Next steps are adding in camera controls (partially done) and then *actual functionality* for the editor.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Levels/OpenWorldTestMap.OpenWorldTestMap
 EditorStartupMap=/Game/Levels/OpenWorldTestMap.OpenWorldTestMap
+GlobalDefaultGameMode=/Game/Blueprints/Gamemodes/BP_GarageGameMode.BP_GarageGameMode_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
